Fixed issue where 4th column was shifting to new line before sub 720

--- a/Lab1/Prob1/gridStyle.css
+++ b/Lab1/Prob1/gridStyle.css
@@ -11,7 +11,7 @@ body {
     color: gray;
     text-align: center;
     font-size: 150%;
-    width: 24.86%;
+    flex-grow: 0.25;
     border: 1px solid black;
   }
   
